# zeus

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: converting-musicorpus-datasets-to-zeus-format.md  musicxml-lmx-and-tokenization.md  zeus-dataset-format-and-pickling.md
src/zeus/: LMXDataset.py  RNNCellsWithAttention.py  RawDatasetSample.py  Samples.py  TokenMap.py  Zeus.py  __main__.py  ser_metric.py
src/zeus/cli/: evaluate_command.py  musicorpus_command.py  pickle_command.py  render_command.py  run.py  train_command.py  visualize_data_command.py  visualize_predictions_command.py
src/zeus/data/: PickledDataset.py  PickledDatasetSample.py  SamplesFile.py  ShuffledView.py  ZeusDataset.py  ZeusDatasetSample.py  ZeusDatasetSamples.py
src/zeus/model/: ArchitectureOptions.py  InferenceOptions.py  KerasModel.py  TokenMap.py  TrainingOptions.py  Zeus.py  construct_tf_dataset.py
src/zeus/musicorpus/: MusicorpusSample.py  convert_image.py  convert_musicorpus_to_zeus.py  convert_musicxml.py  extract_samples_for_page.py
src/zeus/visualization/: render_zeus_dataset_samples.py
